# appalachian-bastion

./: .gitignore  README.md
conduit/: .gitignore  README.md  go.mod
conduit/backend/: go.mod  go.sum
conduit/backend/channel-api/: main.go
conduit/backend/channel-service/: channelDB_test.go  main.go
conduit/data/: server.go
conduit/frontend/: Cargo.toml  README.md  claiminfo.json  index.html  package-lock.json  package.json
conduit/frontend/components/: layout.js
conduit/frontend/pages/: index.js  servers.js
conduit/frontend/src/: application.rs  index.js  main.rs
conduit/frontend/src/components/: card.rs  dev_auth.rs  expiration.rs  identity.rs  json_test.rs  mod.rs
conduit/frontend/src/components/Servers/: ServerList.js  Servers.js
conduit/frontend/src/model/: user.rs
conduit/frontend/styles/: globals.css
conduit/server-api/: README.md  main.go
keycloak/: keycloak-configmap.yaml  keycloak-deployment.yaml  keycloak-external-service-clusterip.yaml  keycloak-ingress.yaml  keycloak-internal-service-clusterip.yaml  keycloak-service-loadbalancer.yaml  smaplekeycloak.yaml
keycloak/chart/: bitnami-keycloak-values.yaml
keycloak/postgres-keycloak/: postgres-keycloak-configmap.yaml  postgres-keycloak-service.yaml  postgres-keycloak-statefulset.yaml
kubernetes/cluster-issuer/: cloudflare-api-token-secert.yaml  cloudflare-dns01-prod-clusterissuer.yaml  cloudflare-dns01-staging-clusterissuer.yaml
local-dev/cert-manager/: local-ca-issuer.yaml  local-minkube-ca-cluster-issuer.yaml
local-dev/secrets/: local-minikube-ca-keypair.yaml
(+199 files in other folders)
