[package]
name = "yew-auth-dev"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

yew-oauth2 = "0.5.0"

chrono = { version = "0.4.23", features = ["wasmbind"] }


gloo-net = "0.2.5"
wasm-bindgen-futures = "0.4.33"


log = { version = "0.4", features = [] }
wasm-bindgen = "0.2.83"
wasm-logger = "0.2"
yew = { version = "0.20", features = ["csr"] }
yew-nested-router = "0.1.0"

gloo-timers = "0.2"
humantime = "2"



serde_json = "1"

openidconnect = { version = "2.2", optional = true, default-features = false, features = ["reqwest", "rustls-tls", "rustcrypto"] }

[features]
default = ["openid"]
openid = ["openidconnect", "yew-oauth2/openid"]

[patch.crates-io]
openidconnect = { git = "https://github.com/ctron/openidconnect-rs", rev = "6ca4a9ab9de35600c44a8b830693137d4769edf4" }
